--- a/public/styles.css
+++ b/public/styles.css
@@ -31,14 +31,34 @@ header {
   font-weight: 700;
 }
 
+.headerProject {
+  font-weight: 400;
+}
+
 /* Form */
 main {
+  margin: auto;
+  margin-top: 5rem;
+  width: 35%;
+}
+
+form {
   display: flex;
   flex-direction: column;
+}
 
-  margin: auto;
-  margin-top: 3rem;
-  width: 35%;
+.form {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+input {
+  padding: 0.8rem;
+  padding-right: 6rem;
+  border: 1px solid;
+  border-color: rgba(149, 149, 149, 0.324);
+  border-radius: 0.5rem;
 }
 
 .submit {
@@ -50,11 +70,42 @@ main {
   cursor: pointer;
   font-size: large;
   font-weight: 500;
-  text-align: center;
 }
 
 /* Meme Image */
-.memeImage {
-  margin-top: 1rem;
+.meme {
+  position: relative;
+  margin-top: 5rem;
   width: 100%;
+}
+
+.memeImage {
+  max-width: 100%;
+  border-radius: 1rem;
+}
+
+.memeText {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 2em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000,
+    -2px 2px 0 #000, 0 2px 0 #000, 2px 0 0 #000, 0 -2px 0 #000, -2px 0 0 #000,
+    2px 2px 5px #000;
+}
+
+.bottom {
+  bottom: 0;
+}
+
+.top {
+  top: 0;
 }
